--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-items: center;
   padding: 1.5em 0;
 
   background-color: #8bc9d9;
@@ -52,6 +53,7 @@ img {
 .social {
   display: flex;
   padding: 0 1rem;
+  margin-left: auto;
 }
 
 .social > li {
